# albasheer-electronic-quran-browser

./: .gitignore  Makefile  README  README.md  albasheer-beta.spec  albasheer-browser  albasheer-browser.spec  albasheer.desktop  albasheer.desktop.in  albasheer.spec  amiri-quran-colored-fontconfig.conf  com.github.yucefsourani.albasheer-electronic-quran-browser.json  com.github.yucefsourani.albasheer_electronic_quran_browser.json~  gen-index.py  meson.build  messages.po  setup.py
albasheer/: core.py  gtkUi.py
albasheer-data/: ix.db
albasheer-data/hafs/: ix.db
data/: com.github.yucefsourani.albasheer-electronic-quran-browser.desktop.in  com.github.yucefsourani.albasheer-electronic-quran-browser.gschema.xml  com.github.yucefsourani.albasheer-electronic-quran-browser.metainfo.xml.in  com.github.yucefsourani.albasheer-electronic-quran-browser.service.in  meson.build
data/icons/: meson.build
flatpak_files/: com.github.yucefsourani.albasheer-electronic-quran-browser.json  com.github.yucefsourani.albasheer-electronic-quran-browser.metainfo.xml
locale/ar/LC_MESSAGES/: albasheer.mo
news_info/: news.json  ramazan2.gif~
po/: LINGUAS  Makefile  POTFILES.in  albasheer.pot  ar.mo  ar.po  meson.build  pt_BR.po
src/: README-ar.txt  README.md  albasheer.gresource.xml  albasheer.in  copy_gui.py  main.py  meson.build  news_window.py  search_window.py  tafasir_w.py  tilawa_download.py  tilawa_gui.py  tilawa_settings.py  tools_bar.py  utl.py  window.py  window.ui
src/albasheer/: core.py  gtkUi.py
src/gtk/: help-overlay.ui
src/tilawa_json_files/: AbdullRahman Al-Sudais.json  Abu Baker Al-shatrei.json  Al-Hudhaify.json  Al-Husary - qasr.json  Al-Tabalawi.json  Awad Al-Juhanee.json  Hani Al-Refaei.json  Ibrahim Al-Dosary (Warsh).json  Mishari Al-efasi.json  Mostafa Ismail.json  Nasser Al-Qatami.json  Saad Al-Gamdi.json  Urdu Translation.json  Yassin Al-Jazaery (Warsh).json
tilawa_json_files/: Abdel-Muhsin Al-Qassem.json  Abdullah Basfar.json  Abdullbaset - Mojawwad.json  Abdullbaset.json  Ahmad Al-ajami.json  Al-Husari (Warsh).json  Al-Husary - Teacher.json  Al-Husary Mujawwad.json  Al-Husary.json  Al-Menshawy - Mojawwad.json  Al-Menshawy - Teacher.json  Al-Menshawy.json  Ayman Sowaid - Teacher.json  English Translation.json  Khalefa Al-Tunaiji.json  Maher Al-moaqeli.json  Mohammad Ayoub.json  Mohammad Jebreil.json  Saud Al-Shoraim.json  Yasser Salamah.json
